# DEVnotes

./: .gitignore  BUILDING.md  INSTALLER.md  README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: 2  Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AiPanel.module.css  AiPanel.tsx
src/components/backup/: BackupDialog.module.css  BackupDialog.tsx
src/components/dashboard/: TabDashboard.module.css  TabDashboard.tsx
src/components/decision/: TabDecisions.module.css  TabDecisions.tsx
src/components/export/: ExportDialog.module.css  ExportDialog.tsx
src/components/gantt/: TabGantt.module.css  TabGantt.tsx
src/components/mindmap/: TabMindMap.tsx
src/components/notes/: TabNotes.module.css  TabNotes.tsx
src/components/onboarding/: Onboarding.module.css  Onboarding.tsx
src/components/plan/: TabPlan.module.css  TabPlan.tsx
src/components/pomodoro/: Pomodoro.module.css  Pomodoro.tsx
src/components/search/: GlobalSearch.tsx  (+1 more)
src/hooks/: useAutoSync.ts  useDebounce.ts  useFileWatcher.ts  useGitStatus.ts  useGlobalHotkey.ts  useHotkeys.ts  useInterval.ts  usePerformance.ts  useReminders.ts
src/i18n/: en.json  ge.json  index.ts  ru.json
src/integrations/: github.ts
src/stores/: useAppStore.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: date.ts  defaults.ts  id.ts  platform.ts  resolution.ts  tauri-stub.ts
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+35 files in other folders)
