[package]
name    = "devnotes"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name       = "devnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-fs              = "2"
tauri-plugin-shell           = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-notification    = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart       = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"

[profile.release]
panic         = "abort"
opt-level     = "s"
strip         = true
